fixed breaking layout on small resolutions (QUICK FIX, whole layout CSS should be refactored)

--- a/public/stylesheets/sass/accordion.sass
+++ b/public/stylesheets/sass/accordion.sass
@@ -3,7 +3,7 @@
   margin: 0 2% 0 1% 
   width: 41%
   color: #333
-  min-width: 418px
+  min-width: 416px
 
   .accordion_element
     position: relative
